HTML linking, Files Added
Added linking between HTML files, and added eslint file and gitignore

--- a/htmlfiles/sales.html
+++ b/htmlfiles/sales.html
@@ -7,6 +7,7 @@
     <title>Sales Page</title>
 </head>
 <body>
+    <a href="/cookie-stand/htmlfiles/index.html">Home Page</a>
     test sales
     <ul class="output">
     </ul>
