--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     test
-
+    <a href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
     <script src="/cookie-stand/app.js"></script>
 </body>
 </html>
