Change Logs (Table)
-Table Formed
-Constructor Function Formed
-Code Cleanup

--- a/htmlfiles/sales.html
+++ b/htmlfiles/sales.html
@@ -4,13 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/cookie-stand/style.css">
+
     <title>Sales Page</title>
 </head>
 <body>
     <a href="/cookie-stand/htmlfiles/index.html">Home Page</a>
     test sales
-    <ul class="output">
-    </ul>
+    <table id="cookietb">
+        
+    </table>
+
+    <table class="testtb">
+        <tr class="testtb">
+            <th></th>
+            <th>6am</th>
+            <th>7am</th>
+            <th>8am</th>
+            <th>9am</th>
+            <th>10am</th>
+            <th>11am</th>
+            <th>12pm</th>
+            <th>1pm</th>
+            <th>2pm</th>
+            <th>3pm</th>
+            <th>4pm</th>
+            <th>5pm</th>
+            <th>6pm</th>
+            <th>7pm</th>
+        </tr>
+        <tr class="testtb">
+            <td>Seattle</td>
+            <td>20 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+        </tr>
+        <tr class="testtb">
+            <td>Tokyo</td>
+            <td>20 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+        </tr>
+    </table>
 
 
     <script src="/cookie-stand/app.js"></script>
