--- a/htmlfiles/sales.html
+++ b/htmlfiles/sales.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <a href="/cookie-stand/htmlfiles/index.html">Home Page</a>
+    <header>
+        
+    </header>
     test sales
     <table id="cookietb">
         
