--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/cookie-stand/style.css">
 </head>
 <body>
+    <div>
+        <img src="/images/salmon.png" alt="Salmon Logo">
+    </div>
     test
     <a href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
     <script src="/cookie-stand/app.js"></script>
