Style Changes And WebForm
Added Page, Form, And color

--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Site</title>
     <link rel="stylesheet" href="/cookie-stand/style.css">
 </head>
 <body>
-    <div>
-        <img src="/images/salmon.png" alt="Salmon Logo">
+    <div class="Home"></div>
+    <nav class="navbar">
+        <img class="logo"src="/cookie-stand/images/salmon.png" alt="Salmon Logo" width="120">
+        <a href="#Home">Home</a>
+        <a href="#Locations">Locations</a>
+        <a href="/">Contact Us</a>
+        <a href="/">Reviews</a>
+        <a class="Sales"href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
+    </nav>
+    <header>
+        <h1>~Pat's Salmon Cookies~</h1>
+        <p class="slogan">Swim upstream for the sweetest treat - try our <span class="cookies">salmon cookies!</span></p>
+    </header>
+
+    <div class="aboutdiv">
+        <p class="aboutus">Pat's Salmon Cookies is a family owned business, whos inspired to bring healhty, delicious, and affordable cookies near you. Check if we have a location near you, come
+            support us and join the Salmon Cookie Family!
+        </p>
+        <img class="familyphoto"src="/cookie-stand/images/family.jpg" alt="The Family" width="800px">
     </div>
-    test
-    <a href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
+    <div class="Locations">
+        <h2 class="h2">Locations</h2>
+    </div>
     <script src="/cookie-stand/app.js"></script>
 </body>
 </html>
