--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -14,7 +14,6 @@
         <a href="#Home">Home</a>
         <a href="#Locations">Locations</a>
         <a href="#Contact">Contact Us</a>
-        <a href="/">Reviews</a>
         <a class="Sales"href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
     </nav>
     <header>
@@ -97,9 +96,17 @@
             </div>
         </div>
     </div>
-    <div>
-        <h2 id="Contact">Contact Us</h2>
-    </div>
+    <section class="contactSec">
+        <div>
+            <h2 id="Contact">Contact Us</h2>
+        </div>
+        <div class="container">
+            <div class="mailcontainer">
+             <img class="icon" src="/cookie-stand/images/mail_FILL0_wght400_GRAD0_opsz48.png" alt="mailicon">
+           </div>
+           <p class="email">connerthompson121@gmail.com</p>
+        </div>
+    </section>
     <script src="/cookie-stand/app.js"></script>
 </body>
 </html>
