--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -14,6 +14,7 @@
         <a href="#Home">Home</a>
         <a href="#Locations">Locations</a>
         <a href="#Contact">Contact Us</a>
+        <a href="#Gallery">Gallery</a>
         <a class="Sales"href="/cookie-stand/htmlfiles/sales.html">Sales Page</a>
     </nav>
     <header>
@@ -105,6 +106,23 @@
              <img class="icon" src="/cookie-stand/images/mail_FILL0_wght400_GRAD0_opsz48.png" alt="mailicon">
            </div>
            <p class="email">connerthompson121@gmail.com</p>
+        </div>
+    </section>
+    <section>
+        <div id="Gallery">
+            <h2>Gallery</h2>
+        </div>
+        <div class="maincontainer">
+            <div class="imgcontainer">
+                <img src="/cookie-stand/images/frosted-cookie.jpg" alt="cookie">
+                <img src="/cookie-stand/images/shirt.jpg" alt="shirt">
+                <img src="/cookie-stand/images/chinook.jpg" alt="firstlogo">
+            </div>
+            <div class="textcontainer">
+                <p class="imgp">1.Photo of the cookie!</p>
+                <p class="imgp">2.Our first merch!</p>
+                <p class="imgp">3.The first logo ever!</p>
+            </div>
         </div>
     </section>
     <script src="/cookie-stand/app.js"></script>
