--- a/htmlfiles/sales.html
+++ b/htmlfiles/sales.html
@@ -20,7 +20,7 @@
  
     <div class="cookiecontainer">
         <table id="cookietb">
-        
+        <tfoot id="footer"></tfoot>
         </table>
     </div>
     <div class="form">
