--- a/htmlfiles/sales.html
+++ b/htmlfiles/sales.html
@@ -26,7 +26,7 @@
     <div class="form">
         <form class="formInput">
             <label for="cityName">Input a City Name: </label>
-            <input type="text" id="cityName" name="cityName">
+            <input type="text" id="cityName" name="cityName" required pattern="[a-zA-Z ]+">
             <input id="buttonclick"type="submit" value="Submit">
         </form>
     </div>
